# logscribe

./: .gitignore  README.md  makefile  pyproject.toml  requirements.txt  setup.py
data/: change-900.yml  change-901.yml  change-902.yml  change-904.yml  change-905.yml  change-906.yml  change-907.yml  change-914.yml  change-920.yml  change-921.yml  change-925.yml  change-926.yml  change-928.yml  change-929.yml  change-930.yml  change-932.yml  change-933.yml  change-934.yml  change-935.yml  change-936.yml  change-939-mr749.yml  change-939.yml  change-940.yml  conftest.conf  gitlog.txt  logscribe.conf  minichange.md  template.yml  test_CHANGELOG.md
logscribe/: __main__.py  add_milestone2changelog.py  changetype.py  cli_argv.py  conf.py  fileio.py  lineformat.py  merge_entry.py  process_argv.py  released_log.py  yaml2changelog.py
src/logscribe/: __main__.py  changelog.py  compare_link.py  configurator.py  entry2markdown.py  fileio.py  filelist.py  mergedbranch.py  milestone.py  vcmp.py
tests/: env.py  test_add_milestone2changelog.py  test_changelog.py  test_changetype.py  test_compare_link.py  test_conf.py  test_configurator.py  test_fileio.py  test_filelist.py  test_lineformat.py  test_mergedbranch.py  test_milestone.py  test_process_argv.py  test_releasedlog.py  test_yaml2changelog.py
