[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logscribe"
version = "0.0.1"
description = "Add entries to CHANGELOG.md from yaml files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.6"
authors = [
    {name = "Glen Johnson", email = "gjohnson@valcom.com"}
]
keywords = ["changelog"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Topic :: Text Processing",
]
urls = {homepage = "http://gitlab.valcom.com/glen/logscribe.git"}


[project.dependencies]
PyYAML = "*"

[project.scripts]
logscribe = "logscribe.__main__:main"

